# pinocchio-examples

./: .gitignore  Cargo.toml  README.md  biome.json  codama.close-account.json  codama.counter.json  codama.json  package.json  pnpm-lock.yaml  tsconfig.json
basic/close-account/: Cargo.toml
basic/close-account/src/: lib.rs
basic/close-account/src/accounts/: meme.rs  mod.rs
basic/close-account/src/instructions/: close_meme.rs  create_meme.rs  mod.rs
basic/counter/: Cargo.toml
basic/counter/src/: error.rs  lib.rs
basic/counter/src/accounts/: counter.rs  counter_authority.rs  mod.rs
basic/counter/src/events/: increase_counter.rs  increase_counter_authority.rs  init_counter.rs  init_counter_authority.rs  mod.rs
basic/counter/src/instructions/: increase_counter.rs  increase_counter_authority.rs  increase_couter_authority.rs  init_counter.rs  init_counter_authority.rs  mod.rs
client/counter/: index.ts
client/counter/accounts/: counterAuthority.ts
client/counter/instructions/: increaseCounterAuthority.ts  initCounter.ts  initCounterAuhthority.ts
client/counter/programs/: index.ts
crates/shared/: Cargo.toml
idl/: close_account.json  counter.json
js-client/close-account/accounts/: index.ts  meme.ts
js-client/close-account/instructions/: closeMeme.ts  createMeme.ts  index.ts
js-client/close-account/programs/: closeAccount.ts  index.ts
js-client/close-account/shared/: index.ts
js-client/counter/: index.ts
js-client/counter/accounts/: counter.ts  counterAuthority.ts  index.ts
js-client/counter/instructions/: increaseCounter.ts  index.ts  initCounter.ts  initCounterAuhthority.ts
js-client/counter/programs/: counter.ts
js-client/counter/types/: counterAuthorityIncreased.ts  counterAuthorityInitialized.ts  counterEvent.ts  counterIncreased.ts  counterInitialized.ts  index.ts
shared/src/: event.rs
spec/: client.ts  keypair.ts  main.ts
spec/close-acount/: main.ts
spec/counter/: main.ts
token/basic-mint/: Cargo.toml
token/basic-mint/src/: lib.rs
token/basic-mint/src/instructions/: create_mint.rs  mod.rs  transfer_mint.rs
token/create-mint/: Cargo.toml
token/transfer-mint/: Cargo.toml
